--- a/ProjectJules/project.yml
+++ b/ProjectJules/project.yml
@@ -19,9 +19,11 @@ targets:
       - path: Views
       - path: Config
     resources:
-      - path: Assets
-        type: folder
-        createIntermediateGroups: true
+      - path: Assets/Fonts/Inter-Medium.ttf
+      - path: Assets/Fonts/Inter-Regular.ttf
+      - path: Assets/Fonts/Inter-SemiBold.ttf
+      - path: Assets/Fonts/PlayfairDisplay-Regular.ttf
+      - path: Assets/Fonts/PlayfairDisplay-SemiBold.ttf
     info:
       path: Info.plist
       properties:
@@ -47,6 +49,8 @@ targets:
         PRODUCT_NAME: ProjectJules
         SWIFT_VERSION: "5.9"
         IPHONEOS_DEPLOYMENT_TARGET: "17.0"
+        CODE_SIGN_STYLE: Automatic
+        DEVELOPMENT_TEAM: ""
 packages:
   supabase-swift:
     url: https://github.com/supabase/supabase-swift
