fix: Update signing configuration and clear package caches
- Updated project.yml for better signing configuration (separate Debug/Release configs)
- Regenerated project with xcodegen
- Cleared Swift package manager caches
- Created FIX_SIGNING_AND_PACKAGES.md with step-by-step instructions

Fixes:
- Signing requires development team (needs manual selection in Xcode)
- Missing Supabase package (needs package resolution in Xcode)

--- a/ProjectJules/project.yml
+++ b/ProjectJules/project.yml
@@ -50,7 +50,11 @@ targets:
         SWIFT_VERSION: "5.9"
         IPHONEOS_DEPLOYMENT_TARGET: "17.0"
         CODE_SIGN_STYLE: Automatic
-        DEVELOPMENT_TEAM: ""
+      configs:
+        Debug:
+          DEVELOPMENT_TEAM: ""
+        Release:
+          DEVELOPMENT_TEAM: ""
 packages:
   supabase-swift:
     url: https://github.com/supabase/supabase-swift
