fix: Add Assets folder to Xcode project resources
- Updated project.yml to include Assets as a resource folder
- This makes Assets folder visible in Xcode Project Navigator
- Users may still need to manually add it if xcodegen doesn't create it visibly
- Added FIX_ASSETS_FOLDER.md with step-by-step instructions

--- a/ProjectJules/project.yml
+++ b/ProjectJules/project.yml
@@ -19,11 +19,8 @@ targets:
       - path: Views
       - path: Config
     resources:
-      - path: Assets/Fonts/Inter-Medium.ttf
-      - path: Assets/Fonts/Inter-Regular.ttf
-      - path: Assets/Fonts/Inter-SemiBold.ttf
-      - path: Assets/Fonts/PlayfairDisplay-Regular.ttf
-      - path: Assets/Fonts/PlayfairDisplay-SemiBold.ttf
+      - path: Assets
+        type: folder
     info:
       path: Info.plist
       properties:
