fix: Add supported interface orientations to resolve warning
- Added UISupportedInterfaceOrientations for iPhone (Portrait, Landscape Left/Right)
- Added UISupportedInterfaceOrientations~ipad for iPad (all orientations)
- Updated project.yml to include orientation settings
- Fixes warning: 'All interface orientations must be supported unless the app requires full screen'

This allows the app to rotate to landscape on iPhone (except upside-down portrait)
and supports all orientations on iPad for better usability.

--- a/ProjectJules/project.yml
+++ b/ProjectJules/project.yml
@@ -27,6 +27,15 @@ targets:
         UIApplicationSceneManifest:
           UIApplicationSupportsMultipleScenes: true
         UILaunchScreen: {}
+        UISupportedInterfaceOrientations:
+          - UIInterfaceOrientationPortrait
+          - UIInterfaceOrientationLandscapeLeft
+          - UIInterfaceOrientationLandscapeRight
+        UISupportedInterfaceOrientations~ipad:
+          - UIInterfaceOrientationPortrait
+          - UIInterfaceOrientationPortraitUpsideDown
+          - UIInterfaceOrientationLandscapeLeft
+          - UIInterfaceOrientationLandscapeRight
         UIAppFonts:
           - PlayfairDisplay-Regular.ttf
           - PlayfairDisplay-SemiBold.ttf
